Update during CSS learning
Just posting the most recent ones before I call it for the day.

--- a/crypto.html
+++ b/crypto.html
@@ -1,27 +1,64 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-<h2>Crypto Investing</h2>
-    <ol>
-      <li><a href="https://100trillionusd.github.io" value="_null">Bitcoin</a></li>
-      <li>DeFi</li>
-        <ul>
-          <li>Ethereum</li>
-          <li>Yield Farming</li>
-          <li>Liquidity Provier</li>
-        </ul>
-      <li>Alternative Use Cases for Decentralization</li>
-    </ol>
+<head>
+  <meta charset="utf-8">
+  <title>Eamon's Crypto Experience</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-    <hr>
+<body>
 
-    <a href="index.html">Return to Main Page</a>
+  <h2>Crypto Investing</h2>
+  <ol>
+    <li><a href="https://100trillionusd.github.io" value="_null">Bitcoin</a></li>
+    <li>DeFi</li>
+    <ul>
+      <li>Ethereum</li>
+      <li>Yield Farming</li>
+      <li>Liquidity Provier</li>
+    </ul>
+    <li>Alternative Use Cases for Decentralization</li>
+  </ol>
+
+  <hr>
 
 
-  </body>
+  <br>
+  <h3>Crypto</h3>
+  <table>
+    <thead>
+      <th>Token</th>
+      <th>First Discovered</th>
+      <th>Why?</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Bitcoin</td>
+        <td>2012</td>
+        <td>Introduction to concept of digital currency, trading, and GPU & ASIC Mining.</td>
+      </tr>
+      <tr>
+        <td>Ethereum</td>
+        <td>2018</td>
+        <td>Exploration of decentralized computing use cases.</td>
+      </tr>
+      <tr>
+        <td>DeFi</td>
+        <td>2020</td>
+        <td>Deployedment capital across broad range of DeFi protocols for, LP, p2p Loans, & DAO</td>
+      </tr>
+      <tr>
+        <td># of People Onboarded</td>
+        <td>6 Individuals & 3 LLCs</td>
+        <td>Assistance with understanding crypto, establishing accounts for CeFi custody and
+          self-custody of tokens, & development of corporate strategies.</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <a href="index.html">Return to Main Page</a>
+  <a href="contact.html">Contact Me</a>
+</body>
+
 </html>
