--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Eamon's Contact Information</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
   <h2>Contact Me</h2>
   <ul>
-    <li><a href="mailto:eamon@breencommunity.com ?subject=Website Contact">Email Me</a></li>
+    <li><a href="mailto:eamon@breencommunity.com ?subject=Website Contact">Email Me</a></li> - or - use the box below
     <li>Phone or Text Message: (907) 723-1149</li>
     <li><a href="https://www.linkedin.com/in/eamon-conheady-685554a3">View my LinkedIn Profile</a></li>
     <li><a href="https://twitter.com/zrowgz">Follow me on Twitter</a></li>
@@ -19,7 +20,7 @@
   <p>
     Please allow up to 3 business days for me to respond to your inquiry. I look forward to hearing from you!
   </p>
-<hr>
+  <hr>
   <form action="mailto:eamon@breencommunity.com>email me</a>" method="post" enctype="text/plain">
     <label for="name">Your Name:</label>
     <input type="text" name="name" value="">
