--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>Eamon's Personal Site</title>
+  <link rel="stylesheet" href="css/style.css">
+
+
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="images/laser-me.jpeg" alt="Photo of myself with lazer eyes.">
+        <img class="circular" src="images/laser-me.jpeg" alt="Photo of myself with lazer eyes.">
       </td>
       <td>
         <h1>Eamon Conheady</h1>
@@ -21,105 +24,25 @@
     </tr>
   </table>
 
+  <h2 id="heading">About Me</h2>
+    <p>I'm from Southeast Alaska, but have lived in many place (all west of the Rockies).</p>
+    <p>San Diego, CA; Salt Lake City, UT; Flagstaff, AZ; Seattle, WA</p>
+    <img class="desert" src="images/desert.jpeg" alt="desert image">
+    <img class="mountain circular"src="images/mtns.png" alt="utah mountains">
+
   <hr>
-
-  <h3>Real Estate Investments</h3>
-  <ul>
-    <li>Single Family Residence in Alaska since 2008</li>
-    <li>Mobile Home Park in Tucson, AZ since 2020</li>
-    <li>Four-Plex Multifamily Residence in Tucson, AZ since <em>pending 04/01/2021 close</em></li>
-  </ul>
-
-  <h3><a href="crypto.html">Crypto Investments</a></h3>
-  <br>
+    <h3><a href="education.html">Education</a></h3>
   <hr>
+    <h3><a href="workhx.html">Work History</a></h3>
+  <hr>
+    <h3><a href="realestate.html">Real Estate Investments</a></h3>
+  <hr>
+    <h3><a href="crypto.html">Crypto Investments</a></h3>
+  <hr>
+    <h3><a href="skillsnhobbies.html">Skills & Hobbies</a></h3>
   <br>
 
-  <h3>Careers</h3>
-  <h3>Nursing Career</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work Experience</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2020 - Current</td>
-        <td>Public Health RN King County - COVID Response</td>
-      </tr>
-      <tr>
-        <td>2019 - 2020</td>
-        <td>Travel Nurse</td>
-      </tr>
-      <tr>
-        <td>2017 - 2019</td>
-        <td>RN - Cardiac ICU - University of Utah Hospital</td>
-
-      </tr>
-    </tbody>
-    <tfoot>
-
-    </tfoot>
-
-  </table>
-  <br><br>
-  <h3>Crypto</h3>
-  <table>
-    <thead>
-      <th>Token</th>
-      <th>First Discovered</th>
-      <th>Why?</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Bitcoin</td>
-        <td>2012</td>
-        <td>Introduction to concept of digital currency, trading, and GPU & ASIC Mining.</td>
-      </tr>
-      <tr>
-        <td>Ethereum</td>
-        <td>2018</td>
-        <td>Exploration of decentralized computing use cases.</td>
-      </tr>
-      <tr>
-        <td>DeFi</td>
-        <td>2020</td>
-        <td>Deployedment capital across broad range of DeFi protocols for, LP, p2p Loans, & DAO</td>
-      </tr>
-      <tr>
-        <td># of People Onboarded</td>
-        <td>6 Individuals & 3 LLCs</td>
-        <td>Assistance with understanding crypto, establishing accounts for CeFi custody and
-          self-custody of tokens, & development of corporate strategies.</td>
-      </tr>
-    </tbody>
-  </table>
-<br>
-<hr>
-<br>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>Web development</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Property Valuation</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Nursing Assessment</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Woodworking</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-  </table>
-
-<hr>
+<hr id="footer">
 
   <p><a href="contact.html">Contact Information</a></p>
 
